# varroa-dashboard

./: .gitreview  README.rst  manage.py  requirements.txt  setup.cfg  setup.py  tox.ini
varroa_dashboard/api/: security.py
varroa_dashboard/content/security/: panel.py  urls.py  views.py
varroa_dashboard/content/security/static/js/: varroa.js
varroa_dashboard/content/security/templates/security/: index.html
varroa_dashboard/enabled/: _1091_security_panel.py
varroa_dashboard/tests/: settings.py
varroa_dashboard/tests/unit/: test_varroa.py
