[metadata]
name = varroa-dashboard
summary = Varroa Dashboard - An OpenStack Horizon plugin
description-file =
    README.rst
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
home-page = https://github.com/NeCTAR-RC/varroa-dashboard
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[files]
packages = varroa_dashboard
